istio/test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  namespace: test-istio
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - host: "test.eni.yannig.ovh"
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 8025
  tls:
    - secretName: test-yannig-ovh-prod-tls
